--- a/style.css
+++ b/style.css
@@ -15,3 +15,9 @@ html, body{
     align-items: center;
     overflow: scroll;
 }
+
+.signup-form{
+    flex:1;
+    background-color: #eff0f1;
+    
+}
