--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 html, body{
     height: 100%;
 }
+
 *{
     margin:0;
     padding: 0; 
+    font-family: "Roboto", sans-serif;
 }
 
 #registration-page{
@@ -22,4 +26,15 @@ html, body{
     max-width: 600px;
     border-radius: 10px;
     border: 1px solid #999;
+}
+
+.form-header{
+    padding: 15px 0;
+    border-bottom: 1px solid #ccc;
+}
+
+.form-header h1{
+    font-size: 28px;
+    text-align: center;
+    color:#666;
 }
