--- a/style.css
+++ b/style.css
@@ -49,5 +49,5 @@ html, body{
     border: 1px solid red;
     display: flex;
     flex-direction: column;
-    margin: 10px 5;
+    margin: 10px 5px;
 }
