--- a/style.css
+++ b/style.css
@@ -39,6 +39,11 @@ html, body{
     color:#666;
 }
 
+.form-body{
+    background: white;
+    padding: 5px 10px;
+}
+
 .row{
     display: flex;
     flex-direction: row;
@@ -46,8 +51,35 @@ html, body{
 
 .input-group {
     flex:1;
-    border: 1px solid red;
     display: flex;
     flex-direction: column;
     margin: 10px 5px;
+}
+
+label{
+    color:#1bba93;
+    font-size: 17px;
+    font-weight: 500;
+}
+
+input[type="text"] {
+
+font-size: 18px;
+height: 34px;
+padding-left: 10px;
+color: #666;
+border: 1px solid #d6d6d6;
+border-radius: 4px;
+background: white;
+outline:none;
+
+}
+
+@media only screen and (max-width: 500px ) {
+    
+    .row{
+        flex-direction: column;
+    }
+
+
 }
