add radio button and label

--- a/style.css
+++ b/style.css
@@ -62,16 +62,19 @@ label{
     font-weight: 500;
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="email"],
+input[type="password"]
+ {
 
-font-size: 18px;
-height: 34px;
-padding-left: 10px;
-color: #666;
-border: 1px solid #d6d6d6;
-border-radius: 4px;
-background: white;
-outline:none;
+    font-size: 18px;
+    height: 34px;
+    padding-left: 10px;
+    color: #666;
+    border: 1px solid #d6d6d6;
+    border-radius: 4px;
+    background: white;
+    outline:none;
 
 }
 
