--- a/style.css
+++ b/style.css
@@ -80,6 +80,18 @@ input[type="password"]
 
 }
 
+.radio-group, .checkbox-group{
+    display: flex;
+}
+
+.radio-group div, .checkbox-group div{
+    flex:1;
+}
+
+.radio-group label, .checkbox-group label{
+    color: #666;
+    cursor: pointer;
+}
 @media only screen and (max-width: 500px ) {
     
     .row{
