--- a/style.css
+++ b/style.css
@@ -66,7 +66,8 @@ label{
 
 input[type="text"],
 input[type="email"],
-input[type="password"]
+input[type="password"],
+select
  {
 
     font-size: 18px;
