--- a/style.css
+++ b/style.css
@@ -67,7 +67,10 @@ label{
 input[type="text"],
 input[type="email"],
 input[type="password"],
-select
+input[type="file"],
+input[type="number"],
+select,
+textarea
  {
 
     font-size: 18px;
@@ -79,6 +82,10 @@ select
     background: white;
     outline:none;
 
+}
+
+input[type="file"]{
+    font-size: 12px;
 }
 
 .radio-group, .checkbox-group{
@@ -114,11 +121,35 @@ select
     text-align: center;
   }
 
+  textarea {
+    resize: none;
+    height:100px;
+  }
+
+  .form-footer {
+    display:flex;
+    justify-content: flex-end;
+}
+
+.btn {
+    margin:10px 20px;
+    padding:10px 20px;
+    background-color: #1BBA93;
+    font-size:17px;
+    border:none;
+    border-radius:5px;
+    color:#bcf5e7;
+    cursor:pointer;
+}
 @media only screen and (max-width: 500px ) {
     
     .row{
-        flex-direction: column;
-    }
+        flex-direction:column; 
+      }
+  
+      .btn {
+          flex:1;
+      }
 
 
 }
